Add support for generating custom bundled JRE with jlink
Add experimental createMacInstallerJPackage and packageMacJPackage
targets

Fix file execute permissions for linux shared libs